# playground-series-s4e12

./: .gitignore  .pre-commit-config.yaml  dvc.yaml  params.yaml  pyproject.toml  xgboost_tune_log_2024-12-13_23-08-42.log.dvc
.dvc/: config
data/oof/: .gitignore
data/preds/: .gitignore
data/prepared/: .gitignore  prepared_imputed_data.feather.dvc  test_prepared.feather.dvc  test_prepared_imputed.feather.dvc
dvclive/: metrics.json  params.yaml
dvclive-optuna/: metrics.json  params.yaml
dvclive/catboost/: metrics.json
dvclive/catboost/plots/custom/: catboost CV Loss.json
dvclive/catboost_layer_0/: metrics.json
dvclive/catboost_layer_1/: metrics.json
dvclive/ensemble/: metrics.json
dvclive/lgbm/: metrics.json
dvclive/lgbm_layer_0/: metrics.json
dvclive/lgbm_layer_1/: metrics.json
dvclive/plots/custom/: XGBoost CV Loss.json  accuracy.json  loss.json
dvclive/xgboost/: metrics.json
dvclive/xgboost_layer_0/: metrics.json
dvclive/xgboost_layer_1/: metrics.json
insurance/: .gitignore  common.py  data_booster.py  data_pipeline.py  hillclimbing.py  log.py  logger.py  predict.py  prepare_basic.py  run_imputer.py  torch_imputer.py  train_basic.py  train_catboost.py  train_ensemble.py  train_imputer.py  train_layer.py  train_lgbm.py  train_xgboost.py  tune_xgboost.py
insurance/boosters/: catboost.py  catboost_unit.py  lgbm.py  lgbm_unit.py  xgboost.py  xgboost_unit.py
notebooks/: .gitignore  autogluon.ipynb  eda of imputed data.ipynb.dvc  eda.ipynb  model_analysis.ipynb  optuna_xgboost.ipynb  pipeline.ipynb  test_multiclass.ipynb
(+36 files in other folders)
