[tool.poetry]
name = "insurance"
version = "0.1.0"
description = ""
authors = ["Jonathan Faustin <faustin.jonathan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dvc = "^3.58.0"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.3"
jupyter = "^1.1.1"
kaggle = "^1.6.17"
dvclive = "^3.48.0"
typer = "^0.15.1"
xgboost = "^2.1.3"
torch = "^2.5.1"
optuna = "^4.1.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
pre-commit = "^4.0.1"
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
